exports[`Avatar renders with custom size 1`] = `
<img
  className="ax-avatar ax-avatar--small"
  src="/image/path"
  style={
    Object {
      "height": 50,
      "width": 50,
    }
  } />
`;

exports[`Avatar renders with defaultProps 1`] = `
<img
  className="ax-avatar ax-avatar--small"
  src="/image/path"
  style={
    Object {
      "height": 35,
      "width": 35,
    }
  } />
`;

exports[`Avatar renders with large when 70 or more 1`] = `
<img
  className="ax-avatar ax-avatar--large"
  src="/image/path"
  style={
    Object {
      "height": 70,
      "width": 70,
    }
  } />
`;

exports[`Avatar renders with small when less than 70 1`] = `
<img
  className="ax-avatar ax-avatar--small"
  src="/image/path"
  style={
    Object {
      "height": 69,
      "width": 69,
    }
  } />
`;
